Fix text readability issues, prepare for more languages

--- a/css/Footer.css
+++ b/css/Footer.css
@@ -28,14 +28,14 @@
 .FooterObject h1 {
     margin-top: 0px;
     margin-right: -15px;
-    font-weight: 400;
+    font-weight: 500;
     width: max-content;
     font-size: var(--footer-font-size);
 }
 .FooterObject p {
     margin-top: 0px;
     margin-right: -15px;
-    font-weight: 400;
+    font-weight: 500;
     width: max-content;
     font-size: var(--footer-font-size);
 }
