--- a/css/Header.css
+++ b/css/Header.css
@@ -27,7 +27,7 @@
     padding-right: 30px;
 }
 .HeaderObject h1 {
-    font-weight: 400;
+    font-weight: 500;
     transition: 0.5s;
 }
 .HeaderSpecial {
