--- a/css/Markdown.css
+++ b/css/Markdown.css
@@ -10,6 +10,12 @@ div {
     width: -moz-fit-content;
     width: fit-content;
 }
+p {
+    font-weight: 500;
+}
+a {
+    font-weight: 500;
+}
 
 h1 {
     text-shadow: 0px 0px 50px hsla(0, 100%, 0%, 0.20);
