--- a/fonts/Rajdhani/Rajdhani.css
+++ b/fonts/Rajdhani/Rajdhani.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Rajdhani';
     src: url('./Rajdhani-Light.ttf') format('truetype');
-    font-weight: 300;
+    font-weight: 200;
     font-style: normal;
 }
 
